feat: add swagger documentation